@@ -11,6 +11,20 @@
 		<option name='show_clipped' value='1'/>
 		<option name='group_data' value='1'/>
 	</report_10>
+	<stdout_file>
+		<option name='xml_folder' value='d:\mess\mrt_output'/>
+		<option name='output_file' value='d:\stdout_file.txt'/>
+		<option name='print_stdout' value='1'/>
+		<option name='ignore_exitcode_4' value='1'/>
+		<option name='group_data' value='1'/>
+	</stdout_file>
+	<stderr_file>
+		<option name='xml_folder' value='d:\mess\mrt_output'/>
+		<option name='output_file' value='d:\stderr_file.txt'/>
+		<option name='print_stderr' value='1'/>
+		<option name='ignore_exitcode_4' value='1'/>
+		<option name='group_data' value='1'/>
+	</stderr_file>
 	<comparison>
 		<option name='report_type' value='1'/>
 		<option name='xml_folder' value='d:\mame\mrt_output.129u3'/>
